--- a/main.html
+++ b/main.html
@@ -10,7 +10,27 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<table border="1">
+	<thead>
+		<tr>
+			<th>NAME</th>
+			<th>AGE</th>
+			<th>BRANCH</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Shaw</td>
+			<td>20</td>
+			<td>CSE</td>
+		</tr>
+		<tr>
+			<td>Adil</td>
+			<td>21</td>
+			<td>ESE</td>
+		</tr>
+	</tbody>
+</table>
 </body>
 
 </html>
