--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <table border="1px solid black">
+	<caption>Student Details.</caption>
 	<thead>
 		<tr>
 			<th>NAME</th>
